only allow resolveAll to succeed once